<resources>
    <string name="app_name">App</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="todo">TODO</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="enter_email_here">Enter Email Here</string>
    <string name="enter_email">Enter Email Here</string>
    <string name="enter_pword_here">Enter Password Here</string>
    <string name="create_email_here">Enter Email Here</string>
    <string name="create_your">Create Your</string>
    <string name="account">Account!</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="create_password_here">Enter Password Here</string>
    <string name="home_page">Home Page</string>
    <string name="account_list">Account List</string>
    <string name="button">Button</string>
    <string name="this_is_a_tool_for_developers">This is a tool for developers.</string>
    <string name="back">BACK</string>
    <string name="back2">BACK</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_this_account">Delete This Account</string>
    <string name="clear_data">Clear Data</string>
    <string name="delete_account">Delete Account</string>
    <string name="textview">TextView</string>
    <string name="add_a_new_plant">Add a New Plant!</string>
    <string name="although_this_is_a_demo_project_and_this_project_is_all_about_the_customization_of_a_dialog_box_we_can_design_whatever_we_want">Although this is a demo project, And this project is all about the customization of a Dialog Box. We can design whatever we want!</string>
    <string name="exitButton">exit button</string>
    <string name="welcome_to_plant">Welcome to Plant!</string>
    <string name="to_get_started_exit_this_popup_and_press_add_a_new_plant_or_head_over_to_settings_and_customize">To get started, exit this popup and press \'Add a new plant!\', or head over to settings and customize!</string>
    <string name="add_a_new_plant_">Add a New Plant!</string>
    <string name="advance"><![CDATA[Advance>>]]></string>
    <string name="to_move_forward_hit_advance_here_and_then_add_a_new_plant">To move forward, hit advance here and then \'Add a new plant!\'</string>
    <string name="goes_back_to_title_page">goes back to title page</string>
    <string name="backButton">Back</string>
    <string name="arrow">arrow</string>
    <string name="customize_profile">Customize Profile</string>
    <string name="click_off_this_popup_and_go_to_add_a_new_plant_to_get_started">Click off this popup and go to \'Add a new plant!\' to get started!</string>
    <string name="calendar">Calendar</string>
    <string name="plants">Plants</string>
    <string name="plant_calendar">Plant Calendar</string>
    <string name="weather_version_1_0">Weather Version 1.0</string>
    <string name="enter_name_of_city">Enter Name of City</string>
    <string name="enter_name_of_country">Enter Name of Country</string>
    <string name="get">Get</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="save">Save</string>
    <string name="you_are_about_to_delete_your_account">You are about to delete your account!</string>
    <string name="if_you_are_sure_press_the_button_below_if_not_click_off_this_popup_message_to_cancel">If you are sure, press the button below. If not, click off this popup message to cancel.</string>
    <string name="i_am_sure">I am sure!</string>
    <string name="need_help">Need Help?</string>
    <string name="our_github_page_has_all_necessary_info_check_it_out_here_at_https_github_com_wsu_4110_veggie_garden_tree_main">Our GitHub page has all necessary info. Check it out here at: https://github.com/WSU-4110/Veggie-Garden/tree/main.</string>
    <string name="enable_disable_notifications">Enable/disable notifications?</string>
    <string name="enable_disable">Enable/Disable</string>
    <string name="under_construction">Under Construction</string>
    <string name="if_you_are_unsure_just_press_cancel">If you are unsure, just press Cancel.</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_new_plant_s_information_below">Add your new plant\'s information below!</string>
    <string name="enter_plant_s_bday_mm_dd_yyyy">Enter Plant\'s Bday! MM/DD/YYYY</string>
    <string name="outdoors">Outdoors?</string>
    <string name="add_this_plant">Add This Plant</string>
    <string name="plant_name">Plant Name</string>
    <string name="database_accessed_image">database accessed image</string>
    <string name="preferred_sunlight">Preferred Sunlight</string>
    <string name="expected_harvest_bloom_date">Expected Harvest/Bloom Date:</string>
    <string name="water_frequency">Water Frequency</string>
    <string name="summary">Summary</string>
    <string name="if_you_are_not_entirely_sure_on_your_plant_s_birthdate_if_it_is_older_then_just_estimate_the_expected_harvest_bloom_date_is_an_estimation_anyways_and_we_will_get_as_close_as_we_can">If you are not entirely sure on your plant\'s birthdate (if it is older), then just estimate. The expected harvest/bloom date is an estimation anyways, and we will get as close as we can!</string>
    <string name="logo">logo</string>
    <string name="weather_information">Weather Information</string>
    <string name="weather_informationn">Weather Information</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="get_conditions">Get Conditions</string>
    <string name="plants_title">Plants</string>
    <string name="virtual_garden">Virtual Garden</string>
    <string name="vg_heading">Your Virtual Garden</string>
    <string name="delete_plant">delete plant</string>
    <string name="edit_vg_heading">Edit your layout!</string>
    <string name="edit_vg_instructions">Note: The layout of the dropdown boxes on this page reflect the layout of your virtual garden layout.</string>
    <string name="edit_vg_done">Done</string>
    <string name="go_to_your_plants">Go To Your Plants</string>
    <string name="edit">Edit</string>
    <string-array name="card_text_titles">
        <item>Customize Profile</item>
        <item>Notifications</item>
        <item>Help</item>
        <item>Change Password</item>
        <item>Log Out</item>
        <item>Delete This Account</item>
    </string-array>
    <string-array name="listOfPlants">
        <item>Select a Plant!</item>
        <item>Beefsteak Tomato</item>
        <item>Beets</item>
        <item>Broccoli</item>
        <item>Cabbage</item>
        <item>Carrot</item>
        <item>Cauliflower</item>
        <item>Cherry Tomato</item>
        <item>Corn</item>
        <item>Cucumber</item>
        <item>Eggplant</item>
        <item>Garlic</item>
        <item>Kale</item>
        <item>Onions</item>
        <item>Orchid</item>
        <item>Radish</item>
        <item>Sunflower</item>
        <item>Turnip</item>
        <item>Yellow Squash</item>
    </string-array>
    <string-array name = "virtualGardenPlantList">
        <item>Empty</item>
        <item>Broccoli</item>
        <item>Cabbage</item>
        <item>Celery</item>
        <item>Corn</item>
        <item>Pepper</item>
        <item>Potato</item>
        <item>Tomato</item>
        <item>Zucchini</item>
    </string-array>
</resources>