<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_vg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_bold"
            android:paddingBottom="12dp"
            android:text="@string/you_are_about_to_delete_your_account"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:text="@string/if_you_are_sure_press_the_button_below_if_not_click_off_this_popup_message_to_cancel"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/are_you_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/i_am_sure" />


    </LinearLayout>
</RelativeLayout>
